--- a/create.html
+++ b/create.html
@@ -34,7 +34,7 @@
     </header>
     <section class="create">
         <form class="create__participant">
-            <h1>Create Conference</h1>
+            <h1 id = "titleConference">Create Conference</h1>
             <label for="name" class="form__name__label">Name</label>
             <input class="form__name" id="name" type="text" placeholder="Text...">
             <label for="amount" class="form__amount__label">Amount of people</label>
@@ -44,7 +44,6 @@
             <button id="submit__button" type="submit" class="submit">Submit</button>
         </form>
     </section>
-    <script type="module" src="./js/main.js"></script>
-    <script type="module" src="./js/util.js.js"></script>
+    <script type="module" src="./js/create.js"></script>
 </body>
 </html>
