--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
 
         </ul>
     </section>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
